--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -7,5 +7,13 @@
     "Video Clips": "المقاطع المرئية",
     "Library": "المكتبة المقروءة",
     "Fatawa": "الفتاوى",
-    "Contact": "إتصل بالموقع"
+    "Contact": "إتصل بالموقع",
+    "Creed": "العقيدة",
+    "Table of contents": "جدول المحتويات",
+    "Classifications": "التصنيفات",
+    "The Qur’an and its sciences": "القرآن وعلومه",
+    "Hadith and its Sciences": "الحديث وعلومه",
+    "Jurisprudence": "الفقه",
+    "Islamic etiquette": "الآداب الشرعية",
+    "Biography of the Prophet": "السيرة النبوية"
 }
