Added interpretations route and view

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -18,5 +18,6 @@
     "Biography of the Prophet": "السيرة النبوية",
     "Sheikh Omar Hamron website": "موقع فضيلة الشيخ عمر حمرون",
     "keywords": "تفسير, تفسير صوتي, كتب, سلاسل علمية, محاضرات, محاضرة, قرآن, آية, آيات, قرآن كريم, إسلام",
-    "All rights reserved": "جميع الحقوق محفوظة"
+    "All rights reserved": "جميع الحقوق محفوظة",
+    "Interpretation and reflection": "التفسير و التدبر"
 }
