explanations routes and view

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -19,5 +19,6 @@
     "Sheikh Omar Hamron website": "موقع فضيلة الشيخ عمر حمرون",
     "keywords": "تفسير, تفسير صوتي, كتب, سلاسل علمية, محاضرات, محاضرة, قرآن, آية, آيات, قرآن كريم, إسلام",
     "All rights reserved": "جميع الحقوق محفوظة",
-    "Interpretation and reflection": "التفسير و التدبر"
+    "Interpretation and reflection": "التفسير و التدبر",
+    "Scientific annotations": "الشروح العلمية"
 }
