--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -1,7 +1,7 @@
 {
     "Interpretation": "ترجمة الشيخ",
     "Explanations": "الشروح العلمية",
-    "Lectures": "المحاضرات الخطب",
+    "Lectures and Sermons": "المحاضرات الخطب",
     "Featured Clips": "مقاطع مختارة",
     "Audio Clips": "المقاطع الصوتية",
     "Video Clips": "المقاطع المرئية",
@@ -19,5 +19,6 @@
     "Sheikh Omar Hamron website": "موقع فضيلة الشيخ عمر حمرون",
     "keywords": "تفسير, تفسير صوتي, كتب, سلاسل علمية, محاضرات, محاضرة, قرآن, آية, آيات, قرآن كريم, إسلام",
     "All rights reserved": "جميع الحقوق محفوظة",
-    "Interpretation and reflection": "التفسير و التدبر"
+    "Interpretation and reflection": "التفسير و التدبر",
+    "Lectures": "المحاضرات "
 }
