audio route and view

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -21,5 +21,6 @@
     "All rights reserved": "جميع الحقوق محفوظة",
     "Interpretation and reflection": "التفسير و التدبر",
     "Lectures": "المحاضرات ",
-    "Scientific annotations": "الشروح العلمية"
+    "Scientific annotations": "الشروح العلمية",
+    "audio": "المقاطع الصوتية "
 }
