--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -23,5 +23,6 @@
     "Lectures": "المحاضرات ",
     "Scientific annotations": "الشروح العلمية",
     "Videos": "المقاطع المرئية",
-    "audio": "المقاطع الصوتية "
+    "audio": "المقاطع الصوتية ",
+    "fatawa": "الفتاوى "
 }
