contact view and route

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -23,6 +23,5 @@
     "Lectures": "المحاضرات ",
     "Scientific annotations": "الشروح العلمية",
     "Videos": "المقاطع المرئية",
-    "audio": "المقاطع الصوتية ",
-    "fatawa": "الفتاوى "
+    "audio": "المقاطع الصوتية "
 }
